tests/paczka1/small_fuzzy/82839380.err
Error in line 3: TYa S974 68,8
Error in line 5: TYa A905 65,2
Error in line 4: J6vg S974 82,0
Error in line 15: J6vg S853 75,4
